--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ body .bottom .ticket-section {
     align-items: center;
     justify-content: flex-start;
     max-width: 50%;
+    margin-left: 30px;
 }
 
 body .bottom .ticket-section a {
