--- a/style.css
+++ b/style.css
@@ -174,3 +174,151 @@ footer p {
     font-size: 16px;
     letter-spacing: 0.5px;
 }
+
+@media (max-width: 1260px) {
+    .top img {
+        max-width: 500px;
+    }
+
+    body .top .top-text h1 {
+        font-size: 50px;
+    }
+
+    body .top .top-text p {
+        font-size: 18px;
+        line-height: 30px;
+    }
+}
+
+@media (max-width: 930px) {
+    body .top .top-text h1 {
+        font-size: 36px;
+    }
+
+    body .mid .text-section h1 {
+        font-size: 76px;
+    }
+
+    body .mid .text-section p {
+        line-height: 35px;
+    }
+
+    body .bottom .schedule-section p {
+        font-size: 18px;
+    }
+
+    body .bottom .ticket-section h1 {
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 850px) {
+    header .logo {
+        height: 80px;
+        width: 150px;
+    }
+    
+    header .events_button {
+        font-size: 18px;
+        width: 110px;
+        margin-right: 25px;
+    } 
+
+    .top img {
+        max-width: 400px;
+    } 
+
+
+    body .bottom .schedule-section {
+        padding: 0 5vh;
+    }
+
+    body .bottom .schedule-section p {
+        font-size: 16px;
+        line-height: 25px;
+    }
+
+    body .bottom .ticket-section h1 {
+        font-size: 30px;
+    }
+
+    body .bottom .ticket-section h2 {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 700px) {
+    body .top {
+        flex-direction: column-reverse;
+    }
+
+    body .mid .text-section {
+        margin: 0;
+        align-items: center;
+        justify-content: center;
+    }
+
+    body .mid .text-section h1 {
+        font-size: 60px;
+        max-width: 90vw;
+        line-height: 50px;
+        margin-left: 10px;
+    }
+
+    body .mid .text-section p {
+        max-width: 90vw;
+        padding: 10vw;
+        font-size: 24px;
+        line-height: 35px;
+    }
+
+    body .bottom {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    body .bottom .schedule-section {
+        max-width: 80vw;
+    }
+
+    body .bottom .schedule-section p {
+        font-size: 16px;
+        line-height: 25px;
+    }
+}
+
+@media (max-width: 520px) {
+    header .logo {
+        height: 80px;
+        width: 100px;
+    }
+    
+    header .events_button {
+        font-size: 16px;
+        width: 100px;
+    } 
+
+    header img {
+        width: 45px;
+    }
+
+    .top img {
+        max-width: 400px;
+    }
+
+    body .bottom .ticket-section {
+        max-width: 100vw;
+    }
+    
+    body .bottom .ticket-section h1 {
+        font-size: 25px;
+    }
+
+    body .bottom .ticket-section h2 {
+        font-size: 20px;
+    }
+
+    footer p {
+        font-size: 14px;
+    }
+}
